--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     
     <!-- TailwindCSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="config.js"></script>
+    <script src="script.js"></script>
 </body>
 
 
