Basic setup of all done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             <!-- News Card -->
             <div class="bg-white rounded-lg shadow-lg p-4">
                 <h3 class="text-xl font-semibold text-gray-800">NEWS</h3>
-                <p class="text-gray-600 mt-2" id="news">News updates will display here.</p>
+                <ul class="text-gray-600 mt-2" id="news_list">
+                    <li
+                        class="text-gray-600 mt-2" id="news">News updates will display here.
+                    </li>
+                </ul>
             </div>
             
             <!-- Currency Converter Card -->
