Added func to get address

--- a/index.html
+++ b/index.html
@@ -49,9 +49,23 @@
 
     <div class="bg-white rounded-lg shadow-lg p-4">
         <h3 class="text-xl font-semibold text-gray-800"> Location</h3>
-        <button onclick="getlocation()" class="text-xl text-gray-600" id="Address">Get Location</button>
+        <button onclick="getlocation()"
+            class="mt-2 px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded hover:bg-blue-700 transition duration-200"
+            id="Address">
+            Get Location
+        </button>
+        <p class="Random Location" id="Rand_location"></p>
     </div>
 
+    <div class="bg-white rounded-lg shadow-lg p-4">
+        <h3 class="text-xl font-semibold text-gray-800"> Location</h3>
+        <button onclick="get_address()"
+            class="mt-2 px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded hover:bg-blue-700 transition duration-200"
+            id="Address">
+            Get Address
+        </button>
+        <p class="Random Location" id="Rand_location"></p>
+    </div>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="config.js"></script>
     <script src="script.js"></script>
